--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
     src: url(./flame-burger-king-font/FlameSans-Regular.woff);
 }
 .r-18yzcnr{
-    width: 170px;
+    width: 100%;
+    max-width: 170px;
     height: 22px;
 }
 .nav-header{
@@ -56,7 +57,8 @@ header{
     margin-right: 8px;
 }
 .bi-person-fill{
-    width: 25px;
+    width:100%;
+    max-width: 25px;
     height: 25px;
     font-size: 24px;
     color: rgb(80, 35, 20);
@@ -64,10 +66,12 @@ header{
     margin-right: 10px;
 }
 .nav-header img{
-    width: 14px;
+    width:100%;
+    max-width: 14px;
 }
 .bi-list{
-    width: 23.99px;
+    width:100%;
+    max-width: 23.99px;
     height: 23.99px;
     color: #502314;
     font-size: 24px;
@@ -78,7 +82,8 @@ header{
     color: rgb(80, 35, 20);
 }
 .bk-order button{
-    width: 299.99px;
+    width:100%;
+    max-width: 299.99px;
     height: 49.99px;
     padding-left: 86px;
     background-color: rgb(214, 35, 0);
@@ -91,7 +96,8 @@ header{
     align-items: center;
 }
 .bk-order img{
-    width: 16px;
+    width:100%;
+    max-width: 16px;
     height: 16px;
 }
 #btn-order-delivery{
@@ -101,7 +107,8 @@ header{
     margin-top: -15px;
 }
 .main-image img{
-    width: 794.99px;
+    width:100%;
+    max-width: 794.99px;
     height: 398px;
     margin-top: 50px;
 }
@@ -118,7 +125,8 @@ header{
 }
 .card1{
     margin-left: 51px;
-    width: 579.87px;
+    width:100%;
+    max-width: 579.87px;
     border: none;
     border-radius: 25px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -179,12 +187,14 @@ header{
     padding: 0px 51px ;
 }
 .about img{
-    width: 473.39px;
+    width:100%;
+    max-width: 473.39px;
     height: 431.27px;
     margin-top: -200px;
 }
 .tc{
-    width: 900.39px;
+    width:100%;
+    max-width: 900.39px;
     height: 431.27px;
     margin-top: 70px;
     margin-left: -200px;
@@ -196,7 +206,8 @@ header{
     color: rgb(80, 35, 20);
 }
 #img1{
-    width: 187.87px;
+    width:100%;
+    max-width: 187.87px;
     height: 90.88px;
 }
 #img2{
@@ -221,7 +232,8 @@ header{
     height: 550px;
 }
 .footer{
-    width: 1285.42px;
+    width:100%;
+    max-width: 1285.42px;
     height: 56px;
     background-color: #502314;
     padding:16px;
@@ -234,7 +246,8 @@ header{
     font-size: 12px;
 }
 .nav-img img{
-    width: 19.99px;
+    width:100%;
+    max-width: 19.99px;
     height: 19.99px;
 }
 .nav-img nav{
